--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,26 +89,27 @@ services:
   app:
     build: .
     container_name: fastapi_app
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     ports:
       - "8000:8000"
     depends_on:
       - db
     environment:
-      - DATABASE_URL=postgresql+asyncpg://postgres:manhlan@db:5433/secondCRUD
+      - DATABASE_URL=postgresql+asyncpg://postgres:manhlan@db:5434/secondCRUD
     volumes:
       - .:/app
     networks:
       - app_network
 
   db:
-    image: postgres:13
+    image: postgres:15
     container_name: postgres_db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: manhlan
       POSTGRES_DB: secondCRUD
     ports:
-      - "5433:5432"
+      - "5434:5432"
     networks:
       - app_network
 
